# Air-Traffic-Passenger-Statistics

./: .gitignore  Planificador_Air_Traffic_Passenger_Statistics.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Data/: Air_Traffic_Passenger_Statistics.csv
Notebooks/: ProyectoFinal_Parte1_Elías_Ramos_Calderón.ipynb  ProyectoFinal_Parte2_Elías_Ramos_Calderón.ipynb
notebooks/: 01_exploration.ipynb  02_modeling_sarima.ipynb
src/air_traffic/: data_processing.py  evaluation.py  modeling.py  pipeline.py
tests/: test_data_processing.py  test_evaluation.py  test_modeling.py
