[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "air_traffic"
version = "0.1.0"
description = "Air Traffic Passenger Statistics Analysis and Forecasting"
authors = [
  { name = "Elias Ramos", email = "elias@example.com" },
]
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "statsmodels",
    "jupyter",
    "notebook",
    "prefect",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
